--- a/static/index.html
+++ b/static/index.html
@@ -8,13 +8,17 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Philip Guo</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1>Robin Osekowsky</h1> 
+    <!-- h1 through h5 are headers. The higher the number, 
+    the smaller the header -->
+	
+    <h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Philip Guo is an assistant professor of cognitive science at UC San Diego (Go Tritons!). His research spans human-computer interaction, online learning, and computing education.</p>
-
-	<h4>Projects</h4>
+    <p> Robin is an undergraduate student at UC San Diego </p>
+	<p> I have no idea what we are doing with this, so I don't know what I want
+        to write </p>
+    <h4>Projects</h4>
 	<ol>
 		<li>Design Thinking</li>
 		<li>Needfinding</li>
